# Define a new workspace
[workspace]
# Set the default worksapce resolver
resolver = "3"

# The members of this workspace
members = [ "client", "server"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
