[package]
name = "punchafriend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.96"
bevy = "0.15"
bevy_egui = {version = "0.32.0", features = ["serde"]}
bevy_rapier2d = {version = "0.29.0", features = ["parallel", "serde-serialize", "debug-render-2d", "enhanced-determinism"]}
tokio = {version = "1.43.0", features = ["full"]}
mlua = {version = "0.10.3", features = ["luajit", "vendored", "send"]}
rand = {version = "0.9.0", features = ["serde"]}
strum = {version = "0.27.1", features = ["derive"]}
parking_lot = "0.12.3"
egui-toast = "0.16.0"
bevy-tokio-tasks = "0.15.0"
quinn = "0.11.6"
rfd = "0.15.2"
rcgen = "0.13.2"
tokio-util = "0.7.13"
uuid = "1.15.1"
rmp-serde = "1.3.0"
serde = {version = "1.0.218", features = ["derive"]}
