[package]
name = "punchafriend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.96"
bevy = {version = "0.15", features = ["serialize"]}
bevy_egui = {version = "0.32.0", features = ["serde"]}
bevy_rapier2d = {version = "0.29.0", features = ["parallel", "serde-serialize", "debug-render-2d", "enhanced-determinism"]}
tokio = {version = "1.43.0", features = ["full"]}
mlua = {version = "0.10.3", features = ["luajit", "vendored", "send"]}
rand = {version = "0.9.0", features = ["serde"]}
strum = { version = "0.27.1", features = ["derive"] }
parking_lot = "0.12.3"
egui-toast = "0.16.0"
bevy-tokio-tasks = "0.15.0"
rfd = "0.15.2"
tokio-util = "0.7.13"
uuid = "1.15.1"
rmp-serde = "1.3.0"
serde = {version = "1.0.218", features = ["derive"]}
log = { version = "0.4.26", features = ["max_level_debug", "release_max_level_warn"] }
dashmap = {version = "6.1.0", features = ["serde"]}
bevy_framepace = "0.18.1"
console-subscriber = "0.4.1"
miniz_oxide = "0.8.5"
image = "0.25.5"
heck = "0.5.0"
egui_extras = {version = "0.30.0", features = ["all_loaders"]}
futures = "0.3.31"
chrono = {version = "0.4.40", features = ["serde"]}
